--- a/Front/adopets/src/app/components/auth/register/register.component.html
+++ b/Front/adopets/src/app/components/auth/register/register.component.html
@@ -1,1 +1,4 @@
-<p>regiter works</p>
+<h1>Create a new User</h1>
+
+<!-- Se me ocurre, que algunos datos como direccion y tel alternativo, se pueden pedir desp. y que no se pueda adoptar si esos campos no están -->
+
