--- a/Front/adopets/src/app/pages/signin/sign-in.component.html
+++ b/Front/adopets/src/app/pages/signin/sign-in.component.html
@@ -1,22 +1,29 @@
-<form [formGroup]="formSingIn" (ngSubmit)="onSubmitLogin()">
+<mat-card>
+  <form [formGroup]="formSingIn" (ngSubmit)="onSubmitLogin()" class="form">
 
-    <label>
-      <input type="email" formControlName="email" placeholder="Email" required>
-    </label>
-  
+    <mat-form-field appearance="standard">
 
-    <!-- NAI: https://angular.io/guide/form-validation#validating-input-in-reactive-forms -->
-    <div *ngIf="formSingIn.get('email').invalid && (formSingIn.get('email').dirty || formSingIn.get('email').touched)">
-      
-      <div *ngIf="formSingIn.get('email').errors.email">
-        Debe ser un email.
-      </div>
-    </div>
-  
-    <label>
-      <input [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Password" required>
-    </label>
-  
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="your email" formControlName="email" type="email" autocomplete="off">
+      <mat-icon matSuffix>email</mat-icon>
+      <mat-hint>Ingres your email</mat-hint>
+
+      <!-- NAI: https://angular.io/guide/form-validation#validating-input-in-reactive-forms -->
+      <!-- https://material.angular.io/components/form-field/examples -->
+      <mat-error *ngIf="formSingIn.get('email').invalid">{{getEmailErrorMessage()}}</mat-error>
+
+    </mat-form-field>
+
+    <mat-form-field appearance="standard">
+
+      <mat-label>Password</mat-label>
+      <input matInput formControlName="password" placeholder="Password" required autocomplete="off">
+      <mat-icon matSuffix>password</mat-icon>
+      <mat-hint>Ingres your password</mat-hint>
+      <mat-error *ngIf="formSingIn.get('password').invalid">{{getPasswordErrorMessage()}}</mat-error>
+    </mat-form-field>
+
     <button type="submit" [disabled]="!formSingIn.valid">Submit</button>
-  
+
   </form>
+</mat-card>
